# Callassist

./: .gitignore  README.md  SCREENSHOT_NOTE.md  package-lock.json  package.json  vite.config.js
Callsupport/src/: style.css
Callsupport/src-tauri/: Cargo.toml  build.rs
Callsupport/src-tauri/binaries/whisper/: download.bat
Callsupport/src-tauri/resources/binaries/whisper/: download.ps1
Callsupport/src-tauri/src/: commands.rs  lib.rs  main.rs
Callsupport/src-tauri/src/commands/: transcribe.rs
Callsupport/src/components/: CallSummary.tsx  ExportButtons.tsx  SentimentAnalysis.tsx  TranscriptDisplay.tsx  UploadBox.tsx
Callsupport/src/styles/: ExportButtons.css
Callsupport/src/utils/: autoSave.ts  export.ts  sentiment.ts
scripts/: build_whisper.py
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Header.tsx  UploadBox.tsx
src/styles/: App.css  CallSummary.css  SentimentAnalysis.css  TranscriptDisplay.css  UploadBox.css
src/utils/: summary.ts  transcribe.ts
whisper/: whisper  whisper.bat
